--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -1,6 +1,6 @@
 .search-area {
   width: 100%;
-  height: auto;
+  min-height: 350px;
   padding: 2rem 1.5rem;
   background-color: #fff;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
