--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -151,11 +151,12 @@
           align-items: center;
           padding: 1rem 0;
           border-radius: 4px;
-          transition: opacity .4s ease;
           overflow: hidden;
   
           &:hover {
-            opacity: 0.8;
+            .product-srch-name {
+              text-decoration: underline;
+            }
           }
   
           .product-srch-icon {
@@ -167,7 +168,7 @@
           }
   
           .product-srch-name {
-            padding-bottom: 0.2rem;
+            padding-bottom: 0.4rem;
             color: initial;
             font-weight: 500;
             white-space: nowrap;
