--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -15,7 +15,8 @@
   animation: grow .3s ease forwards;
 
   .top-area {
-    display: flex;
+    position: relative;
+    // display: flex;
     align-items: center;
     width: 100%;
 
