--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -9,48 +9,50 @@
   min-height: 450px;
   transform: scaleY(0);
   transform-origin: top;
-  padding: 2rem 1.5rem;
+  padding: 1.5rem 1.5rem 3rem;
   background-color: #fff;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   animation: grow .3s ease forwards;
+  
+  .btn-circle {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35px;
+    height: 35px;
+    border-radius: 40px;
+    transition: background-color .4s ease,
+    opacity .4s ease;
+
+    .material-icons {
+      color: #7a8196;
+      font-size: 1.2rem;
+      transition: color .4s ease;
+    }
+
+    &:hover {
+      .material-icons {
+        color: darken(#7a8196, 5);
+      }
+      background-color: #eef0f5;
+    }
+  }
+
+  .close-btn {
+    margin-left: auto;
+  }
 
   .top-area {
     position: relative;
-    // display: flex;
     align-items: center;
     width: 100%;
-
-    button {
-      flex-shrink: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 35px;
-      height: 35px;
-      border-radius: 40px;
-      transition: background-color .4s ease,
-      opacity .4s ease;
-
-      .material-icons {
-        color: #7a8196;
-        font-size: 1.2rem;
-        transition: color .4s ease;
-      }
-
-      &:hover {
-        .material-icons {
-          color: darken(#7a8196, 5);
-        }
-        background-color: #eef0f5;
-      }
-    }
 
     .form-group {
       flex: 1;
       position: relative;
       display: flex;
       align-items: center;
-      margin-right: 3rem;
       border-bottom: thin solid #c7cad8;
 
       &::after {
@@ -61,8 +63,8 @@
         transform: scaleX(0);
         width: 100%;
         height: 1px;
-        background-color: #2587f7;
-        transition: transform .4s ease;
+        background-color: #F72551;
+        transition: transform .3s ease;
         z-index: 1;
       }
   
@@ -75,7 +77,7 @@
       .srch-btn {
         .material-icons {
           color: initial;
-          font-size: 1.4rem;
+          font-size: 1.3rem;
         }
       }
 
@@ -94,6 +96,7 @@
         width: 25px;
         height: 25px;
         pointer-events: none;
+        background-color: #eef0f5;
 
         &.visible {
           opacity: 1;
