--- a/src/app/product/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product/product-details/slider/lightbox/lightbox.component.scss
@@ -137,7 +137,7 @@
         height: 100%;
         border-radius: 4px;
         background-color: #F72551;
-        transition: transform .7s ease;
+        transition: transform .6s linear;
       }
     }
   } 
