--- a/src/app/product/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product/product-details/slider/lightbox/lightbox.component.html
@@ -16,7 +16,10 @@
         <i class="material-icons">navigate_next</i>
       </button>
 
-      <ul (scroll)="onScroll()" #imageContainer class="image-container">        
+      <ul 
+        (scroll)="onScroll()" 
+        #imageContainer 
+        class="image-container">        
         <li #slide *ngFor="let image of images" class="slide">
           <div 
             (mousemove)="onMouseMove($event)" 
