--- a/src/app/product/product-details/product-details.component.scss
+++ b/src/app/product/product-details/product-details.component.scss
@@ -9,7 +9,7 @@
   }  
 
   .banner {
-    background: url('../../../assets/img/banner-3.jpg') center center/cover;
+    background: url('/assets/img/banner-3.jpg') center center/cover;
   }
 
   .reloading {
