--- a/src/app/product/product-details/product-details.component.scss
+++ b/src/app/product/product-details/product-details.component.scss
@@ -41,6 +41,7 @@
         margin-bottom: 1.5rem;
 
         .product-name-price, 
+        .category,
         .brand, 
         .price, 
         .stock-label {
