--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -162,8 +162,8 @@
         }
 
         .product-srch-details {
-          flex: 1;
-
+          width: 100%;
+          
           .product-srch-name {
             display: inline-block;
             margin-bottom: 0.5rem;
