--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -162,14 +162,14 @@
         }
 
         .product-srch-details {
-          flex: 1;
+          max-width: 700px;
           overflow: hidden;
           
           .product-srch-name {
             display: inline-block;
             width: 100%;
             margin-bottom: 0.5rem;
-            padding-bottom: 0.4rem;
+            padding-bottom: 0.2rem;
             color: initial;
             font-weight: 500;
             white-space: nowrap;
@@ -182,6 +182,7 @@
           }
 
           .product-srch-category {
+            padding-bottom: 0.2rem;
             font-size: .8rem;
           }
         }        
