--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -46,6 +46,7 @@
             <img 
               [src]="match.productImage"
               [alt]="match.productName"
+              draggable="false"
               class="product-srch-icon">
             <div class="product-srch-details">
               <a 
@@ -70,6 +71,7 @@
               <img 
                 [src]="srchItem.productImage"
                 [alt]="srchItem.productName"
+                draggable="false"
                 class="product-srch-icon">
               <div class="product-srch-details">
                 <a 
