--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -160,8 +160,8 @@
         }
 
         .product-srch-icon {
-          width: 60px;
-          height: 60px;
+          width: 50px;
+          height: 50px;
           margin-right: 2rem;
           object-fit: contain;
           object-position: center center;
@@ -169,18 +169,20 @@
 
         .product-srch-details {
           max-width: 500px;
-          overflow: hidden;
-          
+
           .product-srch-name {
-            display: inline-block;
+            position: relative;
+            display: flex;
             width: 100%;
             margin-bottom: 0.5rem;
             padding-bottom: 0.2rem;
             color: initial;
             font-weight: 500;
-            white-space: nowrap;
-            text-overflow: ellipsis;            
-            overflow: hidden;
+            white-space: nowrap;   
+
+            .highlight {
+              color: #2587f7;
+            }
 
             &:hover {
               text-decoration: underline;
