--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -52,12 +52,7 @@
               <a 
                 href="/products/{{ match.productId }}"
                 class="product-srch-name">
-                <strong class="highlight">
-                  {{ srchControl.value }}
-                </strong>
-                <span>
-                  {{ match.productName.slice(srchControl.value.length) }}
-                </span>
+                <strong class="highlight">{{srchControl.value}}</strong><span>{{match.productName.slice(srchControl.value.length)}}</span>
               </a>
               <p class="product-srch-category">{{ match.category }}</p>
             </div>
