--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -148,56 +148,59 @@
       width: 100%;
 
       li {
-        position: relative;
-        display: flex;
-        align-items: center;
-        padding: 1rem 0;
-        border-radius: 4px;
-        overflow: hidden;
-
-        &:not(:last-child) {
-          margin-bottom: 1rem;
-        }
-
-        .product-srch-icon {
-          width: 50px;
-          height: 50px;
-          margin-right: 2rem;
-          object-fit: contain;
-          object-position: center center;
-        }
-
-        .product-srch-details {
-          max-width: 500px;
+        width: auto;
+        
+        a {
+          position: relative;
+          display: flex;
+          align-items: center;
+          max-width: 532px;
+          padding: 1rem 1rem 1rem 0;
+          border-radius: 4px;
           overflow: hidden;
 
-          .product-srch-name {
-            position: relative;
-            display: inline-block;
-            width: 100%;
-            margin-bottom: 0.5rem;
-            padding-bottom: 0.2rem;
-            color: initial;
-            font-weight: 500;
-            white-space: nowrap;   
-            text-transform: lowercase;
-            text-overflow: ellipsis;
+          &:not(:last-child) {
+            margin-bottom: 1rem;
+          }
+
+          .product-srch-icon {
+            width: 50px;
+            height: 50px;
+            margin-right: 2rem;
+            object-fit: contain;
+            object-position: center center;
+          }
+
+          .product-srch-details {
+            width: inherit;
             overflow: hidden;
 
-            .highlight {
-              color: #2587f7;
+            .product-srch-name {
+              position: relative;
+              width: 100%;
+              margin-bottom: 0.5rem;
+              padding-bottom: 0.2rem;
+              color: initial;
+              font-weight: 500;
+              white-space: nowrap;   
+              text-overflow: ellipsis;
+              overflow: hidden;
+
+              .highlight {
+                color: #2587f7;
+              }
+
+              // &:hover {
+              //   text-decoration: underline;
+              // }
             }
 
-            // &:hover {
-            //   text-decoration: underline;
-            // }
-          }
-
-          .product-srch-category {
-            padding-bottom: 0.2rem;
-            font-size: .8rem;
-          }
-        }        
+            .product-srch-category {
+              padding-bottom: 0.2rem;
+              font-size: .8rem;
+            }
+          } 
+        }
       }
     }
   }
