--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -29,7 +29,7 @@
             (blur)="isFocused = false"
             [formControl]="srchControl"
             type="text" 
-            placeholder="Looking for a product?">
+            placeholder="Find just what you need">
 
           <button 
             (click)="srchControl.reset(); input.focus()"
