--- a/src/app/product/product-details/product-details.component.html
+++ b/src/app/product/product-details/product-details.component.html
@@ -48,13 +48,13 @@
             (click)="onBuyNow(product?.productId)"            
             [disabled]="!product?.available"
             type="button" 
-            class="btn-xl buy-now-btn">Buy Now</button>
+            class="btn-xl buy-now-btn">Buy now</button>
   
           <button 
             (click)="onAddToCart(product?.productId)"
             [disabled]="!product?.available || !product?.totalStock"
             type="button" 
-            class="btn-xl-filled add-to-cart-btn">Add To Cart</button>
+            class="btn-xl-filled add-to-cart-btn">Add to cart</button>
         </div>
   
         <div class="about-product" [class.reloading]="reloading">
