--- a/src/app/product/product-details/slider/slider.component.html
+++ b/src/app/product/product-details/slider/slider.component.html
@@ -19,7 +19,7 @@
       *ngIf="altImages?.length <= 4 && images.length > altImages?.length"
       (click)="altImages = images" class="btn-xl show-more-btn">
       <i class="material-icons">photo_camera</i>
-      <span>Show More Images</span>
+      <span>Show more images</span>
     </button>
   </div>
 
