--- a/src/app/product/search-results/search.component.scss
+++ b/src/app/product/search-results/search.component.scss
@@ -80,28 +80,9 @@
         width: 100%;        
         margin-top: 1.5rem;
 
-        .buy-now-btn {
-          position: relative;
-          font-size: 0.85rem;
-
-          &::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: -2px;
-            transform: scaleX(0);
-            width: 100%;
-            height: 1px;
-            background-color: #F72551;
-            transition: transform .2s ease;
-          }
-      
-          &:hover::before {
-            transform: scaleX(1);
-          }
-        }
-
         .add-to-cart-btn {
+          margin-left: auto;
+          
           .material-icons {
             color: #F72551;
             font-size: 1.4rem;
