--- a/src/styles.scss
+++ b/src/styles.scss
@@ -162,6 +162,37 @@ img {
   }
 }
 
+.btn-circle {
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 40px;
+  transition: background-color .4s ease,
+  opacity .4s ease;
+
+  &:disabled {
+    opacity: 0.6;
+    cursor: default;
+  }
+
+  .material-icons {
+    color: #7a8196;
+    font-size: 1.2rem;
+    transition: color .4s ease;
+  }
+
+  &:not(:disabled):hover {
+    .material-icons {
+      color: darken(#7a8196, 5);
+    }
+    background-color: #eef0f5;
+  }
+}
+
+
 .btn-xl {
   display: flex;
   align-items: center;
