--- a/src/app/shared/aside-panel/aside-panel.component.scss
+++ b/src/app/shared/aside-panel/aside-panel.component.scss
@@ -10,6 +10,12 @@
   transition: width .3s ease;
   overflow: hidden;
 
+  @media (max-width: 600px) {
+    & {
+      width: 100%;
+    }
+  }
+
   &.slide-out {
     animation: slideOut 0.2s ease forwards;
   }
@@ -28,34 +34,7 @@
     z-index: 10;
 
     .close-btn {
-      flex-shrink: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       margin-left: auto;
-      width: 35px;
-      height: 35px;
-      border-radius: 40px;
-      transition: background-color .4s ease;
-
-      .material-icons {
-        color: #7a8196;
-        font-size: 1.2rem;
-        transition: color .4s ease;
-      }
-
-      &:hover {
-        .material-icons {
-          color: darken(#7a8196, 5);
-        }
-        background-color: #eef0f5;
-      }
     }
-  }
-}
-
-@media (max-width: 600px) {
-  .panel {
-    width: 100%;
   }
 }
