--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -7,7 +7,10 @@
     <div class="top">
       <button 
         (click)="onClose()"
-        type="button" class="close-btn" title="Close">
+        type="button" 
+        class="btn-circle close-btn" 
+        title="Close"
+        aria-label="Close button">
         <i class="material-icons">close</i>
       </button>
     </div>
