--- a/src/app/product/product-details/slider/lightbox/lightbox.component.html
+++ b/src/app/product/product-details/slider/lightbox/lightbox.component.html
@@ -37,7 +37,9 @@
     
     <div class="bottom-content">
       <button 
-        (click)="onRangeClick($event)" class="range-clickable-area">
+        (click)="onRangeClick($event)" 
+        class="range-clickable-area"
+        aria-label="Image scroller">
         <div class="range">
           <span 
             #rangeIndicator
