--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar *ngIf="!hideNavbar"></app-navbar>
-<app-cart></app-cart>
+<shopping-bag></shopping-bag>
 
 <main>
   <router-outlet></router-outlet>
