--- a/src/app/product/shopping-bag/shopping-bag.component.html
+++ b/src/app/product/shopping-bag/shopping-bag.component.html
@@ -18,7 +18,7 @@
 
     <div *ngIf="bagItems?.length" class="content">
       <ul #itemList class="item-list">
-        <h3 class="title">Shopping Cart</h3>
+        <h3 class="title">Shopping bag</h3>
 
         <li *ngFor="let item of bagItems">
           <div *ngIf="item.productImage" class="product-image">
