--- a/src/app/product/search-results/search-results.component.html
+++ b/src/app/product/search-results/search-results.component.html
@@ -40,12 +40,14 @@
         <div class="action-buttons">
           <button 
             (click)="onAddToCart(product.productId)"
-            type="button" class="add-to-cart-btn" title="Add to Cart">
+            class="add-to-cart-btn" 
+            type="button" 
+            title="Add to Bag"
+            aria-label="Add to bag">
             <i class="material-icons">favorite_border</i>
           </button>
         </div>
       </li>
     </ul>
-
   </div>
 </section>
