--- a/src/app/product/search-results/search-results.component.html
+++ b/src/app/product/search-results/search-results.component.html
@@ -39,7 +39,7 @@
 
         <div class="action-buttons">
           <button 
-            (click)="onAddToCart(product.productId)"
+            (click)="onAddToBag(product.productId)"
             class="add-to-cart-btn" 
             type="button" 
             title="Add to Bag"
